fix navbar bug that shifted navbar upwards when clicked on

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,14 @@ body {
     background-color: var(--gigmate-white);
     height: 10vh;
     box-shadow: 0 0px 10px 0 var(--gigmate-black-shadow);
+    position: relative;
+}
+
+.navbar .container-lg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .navbar-brand {
@@ -59,6 +67,15 @@ body {
 .navbar-collapse {
     z-index: 1;
     background-color: var(--gigmate-white);
+}
+
+@media (max-width: 992px) {
+    .navbar-collapse {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+    }
 }
 
 /* Index.html */
